--- a/Plant_Health_Model.ipynb
+++ b/Plant_Health_Model.ipynb
@@ -125,6 +125,31 @@
     "----Apple_healthy\n",
     "----Apple_unhealthy\n",
     "\n",
+    "```\n",
+    "plant_images\n",
+    "└───train\n",
+    "│   └───Apple_healthy\n",
+    "│   │        image1.png\n",
+    "│   │        ...\n",
+    "│   └───Apple_unhealthy\n",
+    "│            image1.png\n",
+    "│            ...\n",
+    "└───valid\n",
+    "│   └───Apple_healthy\n",
+    "│   │        image1.png\n",
+    "│   │        ...\n",
+    "│   └───Apple_unhealthy\n",
+    "│            image1.png\n",
+    "│            ...\n",
+    "└───test\n",
+    "│   └───Apple_healthy\n",
+    "│   │        image1.png\n",
+    "│   │        ...\n",
+    "│   └───Apple_unhealthy\n",
+    "│            image1.png\n",
+    "│            ...\n",
+    "```\n",
+    "\n",
     "The train folder includes around 1400 images for the training.\n",
     "The valid folder includes around 700 images to validate the trained model.\n",
     "The test folder includes again around 120 images to test the model.\n",
@@ -480,13 +505,7 @@
       "46/46 [==============================] - 16s 337ms/step - loss: 0.4062 - tp: 1249.0000 - fp: 209.0000 - tn: 1249.0000 - fn: 209.0000 - accuracy: 0.8567 - precision: 0.8567 - auc: 0.9070 - mae: 0.2235 - mse: 0.1184 - val_loss: 0.3565 - val_tp: 106.0000 - val_fp: 20.0000 - val_tn: 106.0000 - val_fn: 20.0000 - val_accuracy: 0.8413 - val_precision: 0.8413 - val_auc: 0.9238 - val_mae: 0.2337 - val_mse: 0.1105\n",
       "Epoch 39/50\n",
       "46/46 [==============================] - 15s 336ms/step - loss: 0.3689 - tp: 1246.0000 - fp: 212.0000 - tn: 1246.0000 - fn: 212.0000 - accuracy: 0.8546 - precision: 0.8546 - auc: 0.9182 - mae: 0.2110 - mse: 0.1105 - val_loss: 0.2857 - val_tp: 113.0000 - val_fp: 13.0000 - val_tn: 113.0000 - val_fn: 13.0000 - val_accuracy: 0.8968 - val_precision: 0.8968 - val_auc: 0.9523 - val_mae: 0.1426 - val_mse: 0.0733\n",
-      "Epoch 40/50\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 40/50\n",
       "46/46 [==============================] - 15s 337ms/step - loss: 0.3129 - tp: 1286.0000 - fp: 172.0000 - tn: 1286.0000 - fn: 172.0000 - accuracy: 0.8820 - precision: 0.8820 - auc: 0.9468 - mae: 0.1580 - mse: 0.0859 - val_loss: 0.3209 - val_tp: 107.0000 - val_fp: 19.0000 - val_tn: 107.0000 - val_fn: 19.0000 - val_accuracy: 0.8492 - val_precision: 0.8492 - val_auc: 0.9405 - val_mae: 0.1820 - val_mse: 0.1016\n",
       "Epoch 41/50\n",
       "46/46 [==============================] - 16s 337ms/step - loss: 0.3089 - tp: 1290.0000 - fp: 168.0000 - tn: 1290.0000 - fn: 168.0000 - accuracy: 0.8848 - precision: 0.8848 - auc: 0.9477 - mae: 0.1538 - mse: 0.0894 - val_loss: 0.2159 - val_tp: 118.0000 - val_fp: 8.0000 - val_tn: 118.0000 - val_fn: 8.0000 - val_accuracy: 0.9365 - val_precision: 0.9365 - val_auc: 0.9710 - val_mae: 0.1162 - val_mse: 0.0599\n",
