--- a/Plant_Health_Model.ipynb
+++ b/Plant_Health_Model.ipynb
@@ -7,11 +7,9 @@
     "# Visual Deep Learning: Plant Health Model\n",
     "### Gabriel Beutl & Alexander Schwab\n",
     "\n",
-    "#### This notebook describes the creation of a model to evaluate the health of plants. The model was trained with leaves from an apple tree. With this, an application should be able to identify if a tree is unhealthy, by providing a image form a leave of the tree. \n",
+    "This notebook describes the creation of a model to evaluate the health of plants. The model was trained with leaves from an apple tree. With this, an application should be able to identify if a tree is unhealthy, by providing a image form a leave of the tree. \n",
     "\n",
-    "#### The idea to create this model is based on a project that was started last semester. The project GreenThumb is a plant health tracking app, that allows the user to keep track of the health of a plant. With the addition of a trained ai model, the application could be improved a lot in its functionality.\n",
-    "\n",
-    "#### All the steps for the creation of this model are described point by point in this notebook."
+    "The idea to create this model is based on a project that was started last semester. The project GreenThumb is a plant health tracking app, that allows the user to keep track of the health of a plant. With the addition of a trained ai model, the application could be improved a lot in its functionality."
    ]
   },
   {
@@ -22,7 +20,7 @@
     }
    },
    "source": [
-    "### Steps to create this Machine Learning Model:\n",
+    "###  Applied steps for creating this Machine Learning Model:\n",
     "\n",
     "01. Setup\n",
     "02. Load image data and apply data augmentation\n",
@@ -112,18 +110,6 @@
     "### 2. Load Image Data and apply data augmentation and preprocessing\n",
     "\n",
     "#### The structure of the folder is the following:\n",
-    "\n",
-    "-root\n",
-    "--plant_images\n",
-    "---train\n",
-    "----Apple_healthy\n",
-    "----Apple_unhealthy\n",
-    "---valid\n",
-    "----Apple_healthy\n",
-    "----Apple_unhealthy\n",
-    "---test\n",
-    "----Apple_healthy\n",
-    "----Apple_unhealthy\n",
     "\n",
     "```\n",
     "plant_images\n",
